--- a/assets/main.css
+++ b/assets/main.css
@@ -1,9 +1,12 @@
+.buttons-parent {
+    position: relative;
+}
+
 .mt-3 {
     width: 150px;
     height: 50px;
     border: 1px gray solid;
     border-radius: 5px;
-    margin: 5px 1rem 0px auto;
 }
 
 .mt-3:hover {
@@ -12,11 +15,68 @@
     cursor: pointer;
 }
 
+.add-btn {
+    margin-left: 2rem;
+    background-color: rgb(147, 221, 147);
+}
+
+.delete-btn {
+    margin-left: 1rem;
+    background-color: rgb(253, 123, 123);
+}
+
+.save-btn-class {
+    width: 150px;
+    height: 50px;
+    border: 1px gray solid;
+    border-radius: 5px;
+    /* margin: 5px -5rem 0px auto; */
+    position: absolute;
+    right: 5rem;
+}
+
+.save-btn-class:hover {
+    background-color: white;
+    border: 1px black solid;
+    cursor: pointer;
+}
+
 .column-dropdowns {
     display: flex;
-    margin: 1rem 0;
+    margin: 0rem 0;
 }
 
 .drop-columns {
-    min-width: 8rem;
+    min-width: 13rem;
+    margin: 0.25rem 0.25rem;
+}
+
+.column-inputs {
+    margin:  0rem 0rem 1rem 0rem;
+}
+
+.inp {
+    padding: 0.5rem 0.5rem;
+    margin:  0.25rem 0.25rem;
+}
+
+.info-text {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(88, 88, 88);
+}
+
+.highlighted-text {
+    color: black;
+}
+
+.error-div {
+    color: red;
+    position: absolute;
+    bottom: -30px;
+    right: 30px;
+}
+
+.err-input-div {
+    position: relative;
+    display: inline;
 }
